[Monteiro] Estabilização projeto.

--- a/SF.SGL.UI/Shared/MainLayout.razor
+++ b/SF.SGL.UI/Shared/MainLayout.razor
@@ -63,6 +63,11 @@
                         </RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
+                  <RadzenPanelMenuItem Text="Controle Dev">
+                     <ChildContent>
+                        <RadzenPanelMenuItem Text="Counter" Path="counter"></RadzenPanelMenuItem>
+                    </ChildContent>
+                </RadzenPanelMenuItem>
             </ChildContent>
         </RadzenPanelMenu>
     </ChildContent>
