--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/Index.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/Index.razor
@@ -2,4 +2,4 @@
 
 @layout MainLayout
 
-<SF.SGL.UI.Pages.Cadastros.Sistemas.ObtemTodosSistemas.ObtemTodosSistemas></SF.SGL.UI.Pages.Cadastros.Sistemas.ObtemTodosSistemas.ObtemTodosSistemas>
+<SF.SGL.UI.Pages.Cadastros.Sistemas.ConsultaSistemas.ConsultaSistemas/>
