[Monteiro] Melhorias e correções de bugs.

--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/AdicionaSistema/AdicionaSistema.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/AdicionaSistema/AdicionaSistema.razor
@@ -11,7 +11,7 @@
         <RadzenHeading Size="H2" Text="Adicionar Sistema"></RadzenHeading>
         <div class="row">
             <div class="col-md-6">
-                <RadzenTemplateForm Data="@sistema" Visible="@(sistema != null)" TItem="Sistema" Submit="@FormSubmit">
+                <RadzenTemplateForm Data="@sistema" Visible="@(sistema != null)" TItem="Sistema" Submit="@EnvioFormulario">
                     <ChildContent>
                         <RadzenFieldset Text="Parametrizar sistema">
                             <div style="margin-bottom: 1rem" class="row">
@@ -56,7 +56,7 @@
                             <div class="row">
                                 <div class="col-md-12" style="display:flex; justify-content:flex-end; width:100%; padding:1;">
                                     <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Salvar" ButtonStyle="ButtonStyle.Primary" Style="width: 150px; margin-right:5px"></RadzenButton>
-                                    <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Cancelar" Click="@ButtonCancelClick" Style="width: 150px;"></RadzenButton>
+                                    <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Cancelar" Click="@NavegarPaginaSistemas" Style="width: 150px;"></RadzenButton>
                                 </div>
                             </div>
                         </RadzenFieldset>
