--- a/SF.SGL.UI/Shared/MainLayout.razor
+++ b/SF.SGL.UI/Shared/MainLayout.razor
@@ -44,7 +44,7 @@
                 <RadzenPanelMenuItem Text="Home" Path="/"></RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Cadastros">
                     <ChildContent>
-                        <RadzenPanelMenuItem Text="Sistemas" Path="cadastros/sistemas"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Sistemas" Path="Cadastros/Sistemas"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Parametrizações">
@@ -57,10 +57,8 @@
                 </RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Consultas">
                     <ChildContent>
-                        <RadzenPanelMenuItem Text="Log de Operação">
-                        </RadzenPanelMenuItem>
-                        <RadzenPanelMenuItem Text="Log de Auditoria">
-                        </RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Operação" Path="/Consultas/LogOperacao/"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Auditoria"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
                   <RadzenPanelMenuItem Text="Controle Dev">
