--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/EditaSistema/EditaSistema.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/EditaSistema/EditaSistema.razor
@@ -1,75 +1,83 @@
-﻿@page "/cadastros/sistemas/editasistema/{id:int}"
+﻿@page "/Cadastros/Sistemas/Editasistema/{id:int}"
+
 @layout MainLayout
 
 @using Radzen
 @using Radzen.Blazor
 
-@if (sistema == null)
+@if (sistema == null && erroRetornoAPI == null)
 {
     <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" Style="margin-bottom: 20px" />
     <h4>Carregando...</h4>
 }
-else
+else if (sistema != null || erroRetornoAPI?.Message != null)
 {
     <RadzenProgressBar Value="100" ShowValue="false" Max="100" Style="margin-bottom: 20px" />
-    <RadzenContent Container="main">
-        <ChildContent>
-            <RadzenHeading Size="H2" Text="Editar Sistema"></RadzenHeading>
-              <div class="row">
-            <div class="col-md-6">
-                <RadzenTemplateForm Data="@sistema" Visible="@(sistema != null)" TItem="Sistema" Submit="@FormSubmit">
-                    <ChildContent>
-                        <RadzenFieldset Text="Parametrizar sistema">
-                            <div style="margin-bottom: 1rem" class="row">
-                                <div class="col-md-12">
-                                    <RadzenLabel Text="Nome:" Component="nm_sistema" style="width: 100%"></RadzenLabel>
-                                    <RadzenTextBox MaxLength="100" style="display: block; width: 100%" @bind-Value="@sistema.Nome" Name="Nm_sistema">
-                                    </RadzenTextBox>
-                                    <RadzenRequiredValidator Component="Nm_sistema" Text="Nome do sistema é obrigatório." style="position: absolute">
-                                    </RadzenRequiredValidator>
-                                </div>
-                            </div>
-                            <RadzenFieldset Text="Informações de acesso ao serviço">
-                                <div style="margin-bottom: 1rem" class="row">
-                                    <div class="col-md-12">
-                                        <RadzenLabel Text="URL:" Component="nm_url_servico_consulta_log" style="width: 100%"></RadzenLabel>
-                                        <RadzenTextBox MaxLength="255" style="display: block; width: 100%" @bind-Value="@sistema.UrlServicoConsultaLog" Name="Nm_url_servico_consulta_log">
-                                        </RadzenTextBox>
-                                        <RadzenRequiredValidator Component="Nm_url_servico_consulta_log" Text="Url de acesso ao serviço é obrigatória." style="position: absolute">
-                                        </RadzenRequiredValidator>
+    @if (sistema != null)
+    {
+        <RadzenContent Container="main">
+            <ChildContent>
+                <RadzenHeading Size="H2" Text="Editar Sistema"></RadzenHeading>
+                <div class="row">
+                    <div class="col-md-6">
+                        <RadzenTemplateForm Data="@sistema" Visible="@(sistema != null)" TItem="Sistema" Submit="@EnvioFormulario">
+                            <ChildContent>
+                                <RadzenFieldset Text="Parametrizar sistema">
+                                    <div style="margin-bottom: 1rem" class="row">
+                                        <div class="col-md-12">
+                                            <RadzenLabel Text="Nome:" Component="nm_sistema" style="width: 100%"></RadzenLabel>
+                                            <RadzenTextBox MaxLength="100" style="display: block; width: 100%" @bind-Value="@sistema.Nome" Name="Nm_sistema">
+                                            </RadzenTextBox>
+                                            <RadzenRequiredValidator Component="Nm_sistema" Text="Nome do sistema é obrigatório." style="position: absolute">
+                                            </RadzenRequiredValidator>
+                                        </div>
                                     </div>
-                                </div>
-                                <div style="margin-bottom: 1rem" class="row">
-                                    <div class="col-md-12">
-                                        <RadzenLabel Text="Usuário:" Component="nm_usuario_servico_consulta_log" style="width: 100%"></RadzenLabel>
-                                        <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioLogin" Name="Nm_usuario_servico_consulta_log">
-                                        </RadzenTextBox>
-                                        <RadzenRequiredValidator Component="Nm_usuario_servico_consulta_log" Text="Login do usuário de acesso ao serviço é obrigatório." style="position: absolute">
-                                        </RadzenRequiredValidator>
+                                    <RadzenFieldset Text="Informações de acesso ao serviço">
+                                        <div style="margin-bottom: 1rem" class="row">
+                                            <div class="col-md-12">
+                                                <RadzenLabel Text="URL:" Component="nm_url_servico_consulta_log" style="width: 100%"></RadzenLabel>
+                                                <RadzenTextBox MaxLength="255" style="display: block; width: 100%" @bind-Value="@sistema.UrlServicoConsultaLog" Name="Nm_url_servico_consulta_log">
+                                                </RadzenTextBox>
+                                                <RadzenRequiredValidator Component="Nm_url_servico_consulta_log" Text="Url de acesso ao serviço é obrigatória." style="position: absolute">
+                                                </RadzenRequiredValidator>
+                                            </div>
+                                        </div>
+                                        <div style="margin-bottom: 1rem" class="row">
+                                            <div class="col-md-12">
+                                                <RadzenLabel Text="Usuário:" Component="nm_usuario_servico_consulta_log" style="width: 100%"></RadzenLabel>
+                                                <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioLogin" Name="Nm_usuario_servico_consulta_log">
+                                                </RadzenTextBox>
+                                                <RadzenRequiredValidator Component="Nm_usuario_servico_consulta_log" Text="Login do usuário de acesso ao serviço é obrigatório." style="position: absolute">
+                                                </RadzenRequiredValidator>
+                                            </div>
+                                        </div>
+                                        <div style="margin-bottom: 1rem" class="row">
+                                            <div class="col-md-12">
+                                                <RadzenLabel Text="Senha:" Component="nm_senha_servico_consulta_log" style="width: 100%"></RadzenLabel>
+                                                <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioSenha" Name="Nm_senha_servico_consulta_log">
+                                                </RadzenTextBox>
+                                                <RadzenRequiredValidator Component="Nm_senha_servico_consulta_log" Text="Senha do usuário de acesso ao serviço é obrigatória." style="position: absolute">
+                                                </RadzenRequiredValidator>
+                                            </div>
+                                        </div>
+                                    </RadzenFieldset>
+                                    <br />
+                                    <div class="row">
+                                        <div class="col-md-12" style="display:flex; justify-content:flex-end; width:100%; padding:1;">
+                                            <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Salvar" ButtonStyle="ButtonStyle.Primary" Style="width: 150px; margin-right:5px"></RadzenButton>
+                                            <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Cancelar" Click="@NavegarPaginaSistemas" Style="width: 150px;"></RadzenButton>
+                                        </div>
                                     </div>
-                                </div>
-                                <div style="margin-bottom: 1rem" class="row">
-                                    <div class="col-md-12">
-                                        <RadzenLabel Text="Senha:" Component="nm_senha_servico_consulta_log" style="width: 100%"></RadzenLabel>
-                                        <RadzenTextBox MaxLength="200" style="display: block; width: 100%" @bind-Value="@sistema.UsuarioSenha" Name="Nm_senha_servico_consulta_log">
-                                        </RadzenTextBox>
-                                        <RadzenRequiredValidator Component="Nm_senha_servico_consulta_log" Text="Senha do usuário de acesso ao serviço é obrigatória." style="position: absolute">
-                                        </RadzenRequiredValidator>
-                                    </div>
-                                </div>
-                            </RadzenFieldset>
-                            <br />
-                            <div class="row">
-                                <div class="col-md-12" style="display:flex; justify-content:flex-end; width:100%; padding:1;">
-                                    <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Salvar" ButtonStyle="ButtonStyle.Primary" Style="width: 150px; margin-right:5px"></RadzenButton>
-                                    <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Cancelar" Click="@ButtonCancelClick" Style="width: 150px;"></RadzenButton>
-                                </div>
-                            </div>
-                        </RadzenFieldset>
-                    </ChildContent>
-                </RadzenTemplateForm>
-            </div>
-        </div>
-        </ChildContent>
-    </RadzenContent>
+                                </RadzenFieldset>
+                            </ChildContent>
+                        </RadzenTemplateForm>
+                    </div>
+                </div>
+            </ChildContent>
+        </RadzenContent>
+    }
+    else
+    {
+        <p>@erroRetornoAPI.Message</p>
+    }
 }
