--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/EditaSistema/EditaSistema.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/EditaSistema/EditaSistema.razor
@@ -64,8 +64,8 @@ else if (sistema != null || erroRetornoAPI?.Message != null)
                                     <br />
                                     <div class="row">
                                         <div class="col-md-12" style="display:flex; justify-content:flex-end; width:100%; padding:1;">
-                                            <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Salvar" ButtonStyle="ButtonStyle.Primary" Style="width: 150px; margin-right:5px"></RadzenButton>
-                                            <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Cancelar" Click="@NavegarPaginaSistemas" Style="width: 150px;"></RadzenButton>
+                                            <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Cancelar" Click="@NavegarPaginaSistemas" Style="width: 150px; margin-right:5px"></RadzenButton>
+                                            <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Salvar" ButtonStyle="ButtonStyle.Primary" Style="width: 150px;"></RadzenButton>
                                         </div>
                                     </div>
                                 </RadzenFieldset>
