[Monteiro] Ajustes e rascunho de consulta log operação.

--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/AdicionaSistema/AdicionaSistema.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/AdicionaSistema/AdicionaSistema.razor
@@ -54,7 +54,7 @@
                             </RadzenFieldset>
                             <br />
                             <div class="row">
-                                <div class="col-md-12" style="display:flex; justify-content:flex-end; width:100%; padding:1;">
+                                <div class="col-md-12" style="display:flex; justify-content:flex-end; width:100%;">
                                     <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Cancelar" Click="@NavegarPaginaSistemas" Style="width: 150px; margin-right:5px"></RadzenButton>
                                     <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Salvar" ButtonStyle="ButtonStyle.Primary" Style="width: 150px;"></RadzenButton>
                                 </div>
