--- a/SF.SGL.UI/Shared/MainLayout.razor
+++ b/SF.SGL.UI/Shared/MainLayout.razor
@@ -57,7 +57,7 @@
                 </RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Consultas">
                     <ChildContent>
-                        <RadzenPanelMenuItem Text="Log de Operação" Path="/Consultas/LogOperacao/"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Operação" Path="/Consultas/LogOperacao/ConsultaLogOperacao"></RadzenPanelMenuItem>
                         <RadzenPanelMenuItem Text="Log de Auditoria"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
